src/components/Header/ProjectName.scss
@import '../../colours.scss';

.project-name {
  max-width: 50%;
  display: flex;
  align-items: center;
  margin-left: var(--spacing-1);
}

.project-name__input, .project-name__title {
  font-size: 1em;
  font-weight: var(--font-weight-bold);
  padding: var(--spacing-1) var(--spacing-2);
}

.project-name__title {
  margin: 0;
  padding-right: var(--spacing-1);
}

.project-name__button {
  height: fit-content;
  padding: var(--spacing-1);
  svg {
    height: 1rem;
    width: 1rem;
    margin: 0;
  }
}

.project-name__input {
  border-radius: 5px;

  &:focus-visible {
    border: none;
    outline: 2px solid $editor-turquoise;
  }
}

